--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
         debug {
             applicationIdSuffix ".debug"
             resValue "string", "KAKAO_KEY", localProperties['KAKAO_KEY_DEV']
+            resValue "string", "NAVER_CLIENT_ID", localProperties['NAVER_CLIENT_ID']
         }
         release {
             minifyEnabled false
@@ -41,8 +42,9 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation fileTree(dir: 'src/main/jniLibs', include: ['*.aar', '*.jar'], exclude: [])
@@ -51,4 +53,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation files('libs/libDaumMapAndroid.jar')
+
+    implementation('com.naver.maps:map-sdk:3.16.2') {
+        exclude group: 'com.android.support'
+    }
 }
