--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
-            resValue "string", "KAKAO_KEY", localProperties['KAKAO_KEY_DEV']
+            resValue "string", "NAVER_CLIENT_ID", localProperties['NAVER_CLIENT_ID']
         }
         release {
             minifyEnabled false
@@ -41,8 +41,9 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation fileTree(dir: 'src/main/jniLibs', include: ['*.aar', '*.jar'], exclude: [])
@@ -50,5 +51,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation files('libs/libDaumMapAndroid.jar')
+    // 지도 관련 라이브러리
+    implementation('com.naver.maps:map-sdk:3.16.2') {
+        exclude group: 'com.android.support'
+    }
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
