chore: Firebase 환경 세팅 (#3)
* chore: Firebase 라이브러리 추가

* chore: Firebase Realtime Database 라이브러리 제거

* chore: google-services.json 파일 .gitignore에 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 def localProperties = new Properties()
@@ -56,4 +58,12 @@ dependencies {
         exclude group: 'com.android.support'
     }
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:31.3.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-config-ktx'
 }
