feat: ViewModel 의존성 추가, 기본적인 Event 전달 로직 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-config-ktx'
+
+    // ViewModel
+    def lifecycle_version = "2.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation 'androidx.activity:activity-ktx:1.7.0'
 }
