--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
     def lifecycle_version = "2.6.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation 'androidx.activity:activity-ktx:1.7.0'
+
+    // ViewPager
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
