--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,7 @@ dependencies {
 
     // ViewPager
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
