fix: 패키지 명 변경(meonya -> monya)(2)

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,5 +16,5 @@ dependencyResolutionManagement {
         }
     }
 }
-rootProject.name = "Menu Meonya"
+rootProject.name = "Menu Monya"
 include ':app'
