--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,11 @@ def localProperties = new Properties()
 localProperties.load(new FileInputStream(rootProject.file("local.properties")))
 
 android {
-    namespace 'com.woozoo.menumeonya'
+    namespace 'com.woozoo.menumonya'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.woozoo.menumeonya"
+        applicationId "com.woozoo.menumonya"
         minSdk 24
         targetSdk 33
         versionCode 1
