--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MenuMeonya"
+        android:theme="@style/Theme.MenuMonya"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
