--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,15 +9,15 @@ def localProperties = new Properties()
 localProperties.load(new FileInputStream(rootProject.file("local.properties")))
 
 android {
-    namespace 'com.woozoo.menumeonya'
+    namespace 'com.woozoo.menumonya'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.woozoo.menumeonya"
+        applicationId "com.woozoo.menumonya"
         minSdk 24
         targetSdk 33
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,6 +30,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            resValue "string", "NAVER_CLIENT_ID", localProperties['NAVER_CLIENT_ID']
         }
     }
     compileOptions {
@@ -38,6 +39,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    buildFeatures {
+        viewBinding = true
     }
 }
 
@@ -66,4 +70,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-config-ktx'
+
+    // ViewModel
+    def lifecycle_version = "2.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation 'androidx.activity:activity-ktx:1.7.0'
+
+    // ViewPager
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
