--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,13 @@ android {
         debug {
             applicationIdSuffix ".debug"
             resValue "string", "NAVER_CLIENT_ID", localProperties['NAVER_CLIENT_ID']
+            manifestPlaceholders = [app_name: "@string/app_name_debug"]
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             resValue "string", "NAVER_CLIENT_ID", localProperties['NAVER_CLIENT_ID']
+            manifestPlaceholders = [app_name: "@string/app_name"]
         }
     }
     compileOptions {
