--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,9 @@ dependencies {
     // Hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+
+    // RecyclerView-selection
+    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
 }
 
 // Allow references to generated code
