--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,12 +41,14 @@ android {
         debug {
             applicationIdSuffix ".debug"
             resValue "string", "NAVER_CLIENT_ID", localProperties['NAVER_CLIENT_ID']
+            manifestPlaceholders.put("gaEnabled", "false")
             manifestPlaceholders = [app_name: "@string/app_name_debug"]
         }
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             resValue "string", "NAVER_CLIENT_ID", localProperties['NAVER_CLIENT_ID']
+            manifestPlaceholders.put("gaEnabled", "true")
             manifestPlaceholders = [app_name: "@string/app_name"]
             signingConfig signingConfigs.release
         }
