--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="@string/NAVER_CLIENT_ID" />
+
+        <meta-data
+            android:name="firebase_analytics_collection_enabled"
+            android:value="@{gaEnabled}" />
     </application>
 
 </manifest>
