--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,9 @@ dependencies {
 
     // DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
+    // SplashScreen
+    implementation 'androidx.core:core-splashscreen:1.0.1'
 }
 
 // Allow references to generated code
