--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,12 @@ dependencies {
 
     // DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
+    // Test
+//    testImplementation 'org.mockito:mockito-core:5.3.1'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation "com.google.truth:truth:1.1.4"
 }
 
 // Allow references to generated code
