--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         versionCode 19
         versionName "0.1.0-hotfix"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.woozoo.menumonya.HiltTestRunner"
     }
 
     signingConfigs {
@@ -111,6 +111,24 @@ dependencies {
 
     // DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
+    // Test
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
+    androidTestImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
+    androidTestImplementation "org.mockito:mockito-android:2.24.5" // androidTest에서 mockito 사용할 경우 필요함.
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+
+    testImplementation "com.google.truth:truth:1.1.4"
+    androidTestImplementation "com.google.truth:truth:1.1.4"
+
+    testImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+
+    // Hilt testing
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.44"
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.44'
 }
 
 // Allow references to generated code
